<package>
   <name>scalevo_msgs</name>
   <version>0.0.1</version>
   <description>This package defines messages used in scalevo packages.</description>
   <maintainer email="info@scalevo.ch">Scalevo</maintainer>
   <license>BSD</license>

   <url type="website">http://www.scalevo.ch</url>

   <author>Scalevo</author>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>

   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>

</package>
